[package]
name = "memoization"
version = "0.1.0"
authors = ["Eren <eren.simsek@beakwise.com>"]
edition = "2018"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
lazy_static = "1.4.0"
syn = { version = "1.0.73", features = ["extra-traits", "full"] }
quote = "1.0.9"
proc-macro2 = "1.0.27"